--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="container p-32 grid  gap-6  grid-cols-1 md:grid-cols-2 lg:grid-cols-4 shadow-xl">
         <!-- first card -->
         <div class="card   bg-gradient-to-r from-sky-500 to-indigo-500 shadow-xl">
-          <figure><img src="/images/tea-1.png" alt="Shoes" /></figure>
+          <figure><img src="./images/tea-1.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title">Black Tea</h2>
             <p>Creamer could be replaced by fresh milk</p>
@@ -93,7 +93,7 @@
         </div>
         <!-- 2nd card -->
         <div class="card  bg-gradient-to-r from-violet-500 to-fuchsia-500 shadow-xl">
-          <figure><img src="/images/tea-2.png" alt="Shoes" /></figure>
+          <figure><img src="./images/tea-2.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title">Lemon Tea</h2>
             <p>Creamer could be replaced by fresh milk</p>
@@ -102,7 +102,7 @@
         </div>
         <!-- 3rd card -->
         <div class="card bg-gradient-to-r from-sky-500 to-indigo-500 shadow-xl">
-          <figure><img src="/images/tea-3.png" alt="Shoes" /></figure>
+          <figure><img src="./images/tea-3.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title">Milk Tea</h2>
             <p>Creamer could be replaced by fresh milk</p>
@@ -111,7 +111,7 @@
         </div>
         <!-- 4th card -->
         <div class="card bg-gradient-to-r from-violet-500 to-fuchsia-500 shadow-xl">
-          <figure><img src="/images/tea-4.png" alt="Shoes" /></figure>
+          <figure><img src="./images/tea-4.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title">Green Tea</h2>
             <p>Creamer could be replaced by fresh milk</p>
