--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </div>
     </section>
     <!-- grid and row section -->
-    <section class="my-24 flex flex-col lg:flex-row">
+    <section class="my-24 p-32 flex flex-col lg:flex-row">
     <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1 ">
       <div class="rounded-xl h-36 bg-gradient-to-r from-violet-100 to-fuchsia-300"></div>
       <div class="row-span-2"><img src="./images/fresh-1.png" alt=""></div>
@@ -145,10 +145,34 @@
               <h4 class="text-xl font-extrabold">Premium Quality</h4>
               <p>Premium Quality that makes tea more 
                 elegant and more durable when you use it.</p>
-
       </div>
-    
+    </section>
+    <!-- super clints section -->
 
+  <section class="  -my-24  flex md:flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24">
+<div class="space-y-4 ">
+  <h2 class="text-5xl font-extrabold text-white">
+    Meet Our Super 
+    <br>
+    clints
+  </h2>
+  <p class="text-white">There are many variations of passages of 
+    Lorem Ipsum available, but the majority have 
+    suffered alteration in some form, by injected 
+    humour,or randomised words which don't look even slightly believable. </p>
+    </div>
+    <div>
+    <div class="relative p-10 rounded-lg bg-white">
+      <img class="absolute -top-5 -left-5"   src="./images/client.png" alt="">
+    <p>We are providing the best and suitable home 
+      insurance services for the people 
+      who are interested to treatment</p>
+      
+      <br>
+      <h2 class="font-extrabold">Ilham Yuda</h2>
+      <p class="font-medium">Businessman</p>
+   </div>
+  </div>
     </section>
 
     </main>
