--- a/index.html
+++ b/index.html
@@ -149,31 +149,67 @@
     </section>
     <!-- super clints section -->
 
-  <section class="  -my-24  flex md:flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24">
-<div class="space-y-4 ">
-  <h2 class="text-5xl font-extrabold text-white">
-    Meet Our Super 
-    <br>
-    clints
-  </h2>
-  <p class="text-white">There are many variations of passages of 
-    Lorem Ipsum available, but the majority have 
-    suffered alteration in some form, by injected 
-    humour,or randomised words which don't look even slightly believable. </p>
+    <section
+    class="my-24 flex flex-col lg:flex-row gap-12 
+    rounded-xl bg-gradient-to-r from-gradient-start to-gradient-end 
+    px-16 py-24">
+    <div class=" flex lg:pr-28 items-center">
+        <div class="space-y-5">
+            <h2 class="text-5xl font-extrabold text-white">
+                Meet Our Super
+                <br>
+                Clients
+            </h2>
+            <p class="text-white">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration in some form, by injected humour, or randomised words which don't look even slightly
+                believable.
+            </p>
+            <button class="btn btn-white bg-gradient-to-r from-indigo-500
+             via-purple-500
+              to-pink-500 ">Show All</button>
+        </div>
     </div>
-    <div>
-    <div class="relative p-10 rounded-lg bg-white">
-      <img class="absolute -top-5 -left-5"   src="./images/client.png" alt="">
-    <p>We are providing the best and suitable home 
-      insurance services for the people 
-      who are interested to treatment</p>
-      
-      <br>
-      <h2 class="font-extrabold">Ilham Yuda</h2>
-      <p class="font-medium">Businessman</p>
-   </div>
+    <!-- review container  -->
+    <div class="relative">
+      <!-- next review -->
+      <div class="relative z-10 mb-16 opacity-40 p-10 rounded-lg bg-white">
+          <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+              src="./images/client.png" alt="">
+          <p>We are providing the best and suitable home insurance services for the people who are interested
+              to treatment</p>
+          <h4 class="font-bold mt-5">Ilham Yuda</h4>
+          <p class="font-medium">Businessman</p>
+          <div class="flex justify-end">
+              <img src="./images/circles.png" alt="">
+          </div>
+      </div>
+      <!-- current review -->
+      <div class="absolute z-20 top-40 lg:-left-24 lg:w-[430px] p-10 rounded-lg bg-white">
+          <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+              src="images/client.png" alt="">
+          <p>We are providing the best and suitable home insurance services for the people who are interested
+              to treatment</p>
+          <h4 class="font-bold mt-5">Ilham Yuda</h4>
+          <p class="font-medium">Businessman</p>
+          <div class="flex justify-end">
+              <img src="./images/circles.png" alt="">
+          </div>
+      </div>
+      <!-- previous review -->
+      <div class="relative z-10 opacity-40 p-10 rounded-lg bg-white">
+          <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+              src="images/client.png" alt="">
+          <p>We are providing the best and suitable home insurance services for the people who are interested
+              to treatment</p>
+          <h4 class="font-bold mt-5">Ilham Yuda</h4>
+          <p class="font-medium">Businessman</p>
+          <div class="flex justify-end">
+              <img src="./images/circles.png" alt="">
+          </div>
+      </div>
   </div>
-    </section>
+</section>
 
     </main>
 
